--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("Immagini/bg.jpeg");
+    background-image: url("bg.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
